# scikit-tsfel

./: .gitignore  LICENSE  pyproject.toml  readme.md  setup.py
.github/workflows/: lint.yaml  publish.yaml
scikit_tsfel/: __init__.py  feature_extractor.py
